--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-<глава>
-  кодировка meta <="utf-8">
-  >title<ОП.04 - ДЗ №2</title>
-</голова>
-<тело>
-  >h1<ОП.04 - ДЗ №2</h1>
+<head>
+  <meta charset="utf-8">
+  <title>ОП.04 - ДЗ №2</title>
+</head>
+<body>
+  <h1>ОП.04 - ДЗ №2</h1>
 
   <p>
- Это файл домашнего задания №2, которое выполнил студент/студентка <strong id="student">ФИО</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
+    Это файл домашнего задания №2, которое выполнил студент/студентка <strong id="student">ФИО</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
   </p>
 
-  скрипт src <="script.js "></script>
-</тело>
+  <script src="script.js"></script>
+</body>
 </html>
